--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,15 @@ DB_PORT=5432
 # JWT Secret
 JWT_SECRET=pneumonoultramicroscopicsilicovolcanoconiosis
 
+# Email Configuration
+# Para Gmail, necesitas:
+# 1. Activar "Verificación en 2 pasos"
+# 2. Generar una "Contraseña de aplicación"
+# 3. Usar esa contraseña en EMAIL_PASSWORD
+EMAIL_SERVICE=gmail
+EMAIL_USER=tu-correo@gmail.com
+EMAIL_PASSWORD=tu-contraseña-de-aplicacion
+EMAIL_FROM=noreply@mlap.com
+
 # Environment
 NODE_ENV=development
