--- a/.env.example
+++ b/.env.example
@@ -16,14 +16,19 @@ DB_PORT=5432
 JWT_SECRET=pneumonoultramicroscopicsilicovolcanoconiosis
 
 # Email Configuration
+# EMAIL_USER es la cuenta DESDE la cual se ENVÍAN los códigos (cuenta de sistema)
+# Los usuarios pueden tener cualquier correo (Gmail, Outlook, Yahoo, etc.)
+# 
 # Para Gmail, necesitas:
-# 1. Activar "Verificación en 2 pasos"
-# 2. Generar una "Contraseña de aplicación"
-# 3. Usar esa contraseña en EMAIL_PASSWORD
+# 1. Activar "Verificación en 2 pasos" en https://myaccount.google.com/security
+# 2. Generar una "Contraseña de aplicación" para "Correo"
+# 3. Copiar la contraseña de 16 caracteres (sin espacios)
+# 
+# Ejemplo: Crear cuenta sistema.mlap@gmail.com o usar tu cuenta personal
 EMAIL_SERVICE=gmail
-EMAIL_USER=tu-correo@gmail.com
-EMAIL_PASSWORD=tu-contraseña-de-aplicacion
-EMAIL_FROM=noreply@mlap.com
+EMAIL_USER=sistema.mlap@gmail.com
+EMAIL_PASSWORD=tu-contraseña-de-aplicacion-16-caracteres
+EMAIL_FROM=MLAP Sistema <noreply@mlap.com>
 
 # Environment
 NODE_ENV=development
